tests/src/frontend/syntax/invalid/under_ident_4.sk
class Foo<T>(x: T, y: T) {
  fun matcher(): T {
    this match {
    | Foo _ -> _
    }
  }
}
